--- a/style.css
+++ b/style.css
@@ -1,48 +1,66 @@
 body {
+  background-color: black;
+  color: white;
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f4f4f4;
 }
 
 header {
-  background-color: #2d3436;
-  color: white;
-  text-align: center;
+  background-color: #333;
   padding: 20px;
+  text-align: center;
 }
 
 h1 {
-  font-size: 2.5em;
+  font-size: 3em;
 }
 
 main {
   padding: 20px;
 }
 
-section {
-  margin-bottom: 40px;
+.input-container {
+  margin-bottom: 20px;
+}
+
+select {
+  background-color: #555;
+  color: white;
+  font-size: 1.2em;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+}
+
+#song-list {
+  margin-top: 20px;
+}
+
+.song-item {
+  background-color: #333;
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.song-item input {
+  background-color: #555;
+  color: white;
+  border: none;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 1.1em;
 }
 
 footer {
   text-align: center;
-  background-color: #2d3436;
+  background-color: #333;
   color: white;
   padding: 10px;
   position: fixed;
   width: 100%;
   bottom: 0;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-li {
-  background-color: #ffffff;
-  margin: 10px 0;
-  padding: 10px;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
