--- a/style.css
+++ b/style.css
@@ -2,34 +2,65 @@ body {
   background-color: black;
   color: white;
   font-family: Arial, sans-serif;
-  padding: 20px;
+  margin: 0;
+  padding: 0;
 }
 
-h1 {
+header {
+  background-color: #333;
+  padding: 20px;
   text-align: center;
 }
 
-#songListContainer {
+h1 {
+  font-size: 3em;
+}
+
+main {
+  padding: 20px;
+}
+
+.input-container {
+  margin-bottom: 20px;
+}
+
+select {
+  background-color: #555;
+  color: white;
+  font-size: 1.2em;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+}
+
+#song-list {
   margin-top: 20px;
 }
 
 .song-item {
-  background-color: gray;
+  background-color: #333;
   padding: 10px;
-  margin: 5px 0;
+  margin: 10px 0;
   border-radius: 5px;
-  cursor: move;
+  display: flex;
+  justify-content: space-between;
 }
 
-.song-item.dragging {
-  opacity: 0.5;
+.song-item input {
+  background-color: #555;
+  color: white;
+  border: none;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 1.1em;
 }
 
-input {
+footer {
+  text-align: center;
   background-color: #333;
   color: white;
-  padding: 5px;
-  margin: 10px;
-  border: 1px solid #444;
-  border-radius: 3px;
+  padding: 10px;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
 }
